# widget-vue-cookiecutter

./: .coveragerc  .env.example  .gitignore  .gitlab-ci.yml  .npmrc  .yarnrc  Dockerfile  ExampleUsage.ipynb  KITeGG-ASCii.txt  LICENSE  LICENSE.txt  MANIFEST  MANIFEST.in  README.md  Untitled.ipynb  codecov.yml  cookiecutter.json  docker-compose.yaml  install.json  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.py  setup.sh  tsconfig.json  vuewidget.json  webpack.config.js
docs/: Makefile  environment.yml  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
docs/source/_static/: embed-bundle.js.LICENSE.txt
examples/: ExampleUsage.ipynb  introduction.ipynb
jovyan/.jupyter/lab/workspaces/: auto-w-47cd.jupyterlab-workspace
jovyan/.local/share/jupyter/runtime/: jupyter_cookie_secret
src/: ExampleStore.ts  ExampleWidget.ts  Greeting.vue  extension.ts  index.ts  plugin.ts  version.ts  widget.ts
src/components/: button.ts
src/widget/: Example.vue  index.ts
vuewidget/: __init__.py  _frontend.py  _version.py  example.py
vuewidget/nbextension/: extension.js
vuewidget/tests/: conftest.py  test_example.py  test_nbextension_path.py
{{cookiecutter.github_project_name}}/: .gitignore  Dockerfile  KITeGG-ASCii.txt  README.md  docker-compose.yaml  package.json  pyproject.toml  pytest.ini  setup.sh  webpack.config.js  {{cookiecutter.python_package_name}}.json
{{cookiecutter.github_project_name}}/docs/: environment.yml
{{cookiecutter.github_project_name}}/docs/source/: develop-install.rst  index.rst  installing.rst
{{cookiecutter.github_project_name}}/examples/: ExampleUsage.ipynb
{{cookiecutter.github_project_name}}/src/: extension.ts  index.ts  plugin.ts  version.ts
{{cookiecutter.github_project_name}}/src/widget/: Example.vue  index.ts  store.ts
{{cookiecutter.github_project_name}}/{{cookiecutter.python_package_name}}/: __init__.py  _version.py  example.py
